Fixed clipping on login page

--- a/django/apps/blue_management/blue_mgnt/static/less/style.less
+++ b/django/apps/blue_management/blue_mgnt/static/less/style.less
@@ -884,10 +884,10 @@ body.login {
     .clear();
     .login-wrapper {
         margin: 3% auto;
-        width: 775px;
+        width: 830px;
         .right-col {
             width: 385px;
-            margin-left: 75px;
+            margin-left: 50px;
             div:first-of-type {
                 margin-bottom: 40px;
             }
